# ChangeLog for dev-java/sun-jms
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jms/ChangeLog,v 1.12 2007/06/12 16:06:11 flameeyes Exp $

  12 Jun 2007; Diego Pettenò <flameeyes@gentoo.org> sun-jms-1.1-r2.ebuild:
  Add ~x86-fbsd keyword, as per bug #173452.

  01 Apr 2007; Raúl Porcel <armin76@gentoo.org> sun-jms-1.1-r2.ebuild:
  Add ~ia64 keyword wrt bug 158687

  01 Apr 2007; Vlastimil Babka <caster@gentoo.org> sun-jms-1.1-r2.ebuild:
  Give users direct link to download page in pkg_nofetch() - bug #172991

  26 Jan 2007; Vlastimil Babka <caster@gentoo.org> -sun-jms-1.1-r1.ebuild:
  Gen-1 punt.

  26 Jan 2007; Steve Dibb <beandog@gentoo.org> sun-jms-1.1-r2.ebuild:
  amd64 stable, bug 158489

  11 Jan 2007; Petteri Räty <betelgeuse@gentoo.org> metadata.xml,
  sun-jms-1.1-r1.ebuild, sun-jms-1.1-r2.ebuild:
  Ebuild cleanup.

  30 Dec 2006; Markus Rothe <corsair@gentoo.org> sun-jms-1.1-r2.ebuild:
  Stable on ppc64; bug #158489

  22 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  sun-jms-1.1-r2.ebuild:
  Stable on ppc wrt bug #158489.

  19 Dec 2006; Christian Faulhammer <opfer@gentoo.org>
  sun-jms-1.1-r2.ebuild:
  stable x86, bug #158489

  05 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> sun-jms-1.1-r1.ebuild,
  sun-jms-1.1-r2.ebuild:
  Dropping sparc keywords, see #96229

*sun-jms-1.1-r2 (02 Sep 2006)

  02 Sep 2006; Joshua Nichols <nichoj@gentoo.org> +sun-jms-1.1-r2.ebuild:
  Revision bump to support the new Java system.

*sun-jms-1.1-r1 (15 Oct 2005)

  15 Oct 2005; Thomas Matthijs <axxo@gentoo.org> +metadata.xml,
  +sun-jms-1.1-r1.ebuild:
  move dev-java/jms dev-java/sun-jms

  30 May 2005; Gustavo Zacarias <gustavoz@gentoo.org> jms-1.1.ebuild:
  Stable on sparc

  18 May 2005; Markus Rothe <corsair@gentoo.org> jms-1.1.ebuild:
  Stable on ppc64

  04 May 2005; Jan Brinkmann <luckyduck@gentoo.org> jms-1.1.ebuild:
  stable on amd64, ppc and x86
