@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/sun-jms
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jms/ChangeLog,v 1.12 2007/06/12 16:06:11 flameeyes Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jms/ChangeLog,v 1.13 2008/06/16 19:18:02 serkan Exp $
+
+  16 Jun 2008; Serkan Kaba <serkan@gentoo.org> sun-jms-1.1-r2.ebuild:
+  Fix download URL and quoting.
 
   12 Jun 2007; Diego Pettenò <flameeyes@gentoo.org> sun-jms-1.1-r2.ebuild:
   Add ~x86-fbsd keyword, as per bug #173452.
